** Released as 0.6.0 (2012-02-15)
    * added function 'minRequiredVersion' to ensure a certain version of this
      package is used
    * added function 'clip' to clip values of objects to a certain range
    * added function 'paste0' as wrapper for 'paste' with 'sep=""'

** Released as 0.5.5 (2012-02-14)
    * added parameter 'return' for function 'sm' which causes the working
      directory to be set to the old value after changing to the specified
      directory and including the file 'main.R' ('return' is 'FALSE' by default,
      so the standard behavior is identical to previous versions)

** Released as 0.5.4 (2012-01-18)
    * added function 'scurve' which plots a curve of a function and shades parts
      of the area under the curve

** Released as 0.5.3 (2012-01-16)
    * renamed function 'st1' to 'st'
    * updated functions 'st' and 'out' to better deal with output of large lists

** Released as 0.5.2 (2012-01-16)
    * fixed bug in function 'out' which occured if an object name was too long
    * added function 'st1' as shortcut for 'str' with maximum level 1 (useful
      for displaying largely nested list structures)

** Released as 0.5.1 (2011-11-30)
    * added function 'finite' which returns all finite elements of an object
    * added function 'reaload.package' to entirely reload a package (e.g. after
      re-installing a package)

** Released as 0.5.0 (2011-11-29)
    * rewrote and reorganized the functions for image display and colorization,
      'pm(X)' is now a wrapper for 'pr(colorize(X))', 'pr' is a function for
      _p_lotting _r_aster images and 'colorize' can now also use an entire
      image as 'col' argument which causes an overplotting of the original
      image with 'col'
    * fixed a bug in function 'pm' which now can display logical matrices
    * updated function 'writeImage' to also deal with raster images (and not
      just numeric arrays)
    * added function 'mvdnorm' which calculates the density of a multivariate